sumo/tests/traci/get_variable/ArealDetector/errors/UnsupportedVariable/errors.traci
Error: Answered with error to command 0x8e: Get Areal Detector Variable: unsupported variable specified
